--- a/media.html
+++ b/media.html
@@ -9,91 +9,92 @@
 </head>
 <body>
     <div class="container">
-        <food>
+        <div class="food">
             <img src="image/food.webp" alt="">
-            <h3>Food Item - 1</h3>
-            <p>price -01 </p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet quas laboriosam alias totam consectetur ut quos consequatur in modi voluptates?</p>
+            <h3 >Food Item - 1</h3>
+            <p>price - 100 Taka </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, vitae. Quod dolor accusamus odio officia facilis, veritatis sit! Deleniti, quaerat.</p>
             <button>Buy Now</button>
-        </food>
-        <food>
+        </div>
+        <div class="food">
             <img src="image/food.webp" alt="">
             <h3>Food Item - 2</h3>
-            <p>price -02 </p>
-            <p>Ipsum expedita placeat natus aspernatur sunt error est sequi? Quis voluptatibus assumenda qui explicabo, doloremque rerum cum non repellendus harum?</p>
+            <p>price - 200 Taka </p>
+            <p>Vitae debitis totam excepturi optio quibusdam, vero voluptatum ea autem nisi blanditiis accusamus recusandae labore explicabo voluptas nihil ad id?</p>
             <button>Buy Now</button>
-        </food>
-        <food>
+        </div>
+        <div class="food">
             <img src="image/food.webp" alt="">
             <h3>Food Item - 3</h3>
-            <p>price -03 </p>
-            <p>Animi maiores voluptates aliquam accusantium temporibus? Aut animi sed culpa error est iure inventore nostrum, illo non? Consequatur, perferendis maiores!</p>
+            <p>price - 300 Taka </p>
+            <p>Qui, maiores? Iste similique iusto architecto adipisci? Est nemo ipsam fugit quae maiores. Hic distinctio exercitationem quo velit, totam laudantium?</p>
             <button>Buy Now</button>
-        </food>
-        <food>
+        </div>
+        <div class="food">
             <img src="image/food.webp" alt="">
             <h3>Food Item - 4</h3>
-            <p>price -04 </p>
-            <p>Sequi beatae repellendus itaque odit temporibus dolorem error et omnis eligendi nemo a quae quis, rem eum doloremque laudantium maiores.</p>
+            <p>price - 400 Taka </p>
+            <p>Hic sunt recusandae tenetur quas quae, atque ipsa dicta harum vitae quasi tempore quidem aut adipisci debitis eius, excepturi eaque?</p>
             <button>Buy Now</button>
-        </food>
-        <food>
+        </div>
+        <div class="food">
             <img src="image/food.webp" alt="">
             <h3>Food Item - 5</h3>
-            <p>price -05 </p>
-            <p>Praesentium, sequi vitae! Repudiandae animi eligendi magnam suscipit beatae corrupti expedita, cupiditate consectetur ipsam sint exercitationem, nulla perspiciatis incidunt accusamus?</p>
+            <p>price - 500 Taka </p>
+            <p>Perferendis corporis voluptate aperiam architecto porro consequuntur vel mollitia dolores! Eum, deserunt praesentium? Nemo cum voluptatem culpa impedit facere iste!</p>
             <button>Buy Now</button>
-        </food>
-        <food>
+        </div>
+        <div class="food">
             <img src="image/food.webp" alt="">
             <h3>Food Item - 6</h3>
-            <p>price -06 </p>
-            <p>Earum adipisci sequi amet nihil quo placeat voluptatum blanditiis exercitationem officia, porro qui aliquid. Facilis minima dicta rem nemo. Dicta?</p>
+            <p>price - 600 Taka </p>
+            <p>Totam, asperiores! A corporis, vero molestias dicta non excepturi obcaecati tempora soluta delectus voluptatibus. Reprehenderit optio et tempora consequatur magnam.</p>
             <button>Buy Now</button>
-        </food>
-        <food>
+        </div>
+        <div class="food">
             <img src="image/food.webp" alt="">
             <h3>Food Item - 7</h3>
-            <p>price -07 </p>
-            <p>Magni distinctio enim praesentium voluptatem ea beatae omnis minus reiciendis repudiandae amet, autem similique nostrum quo! Incidunt sit aut quasi!</p>
+            <p>price - 700 Taka </p>
+            <p>Eos cum, provident sint velit voluptate inventore iusto, architecto doloribus, debitis vitae dolorum tempore molestias sunt veritatis reprehenderit adipisci nihil!</p>
             <button>Buy Now</button>
-        </food>
-        <food>
+        </div>
+        <div class="food">
             <img src="image/food.webp" alt="">
             <h3>Food Item - 8</h3>
-            <p>price -08 </p>
-            <p>Facere, cum ea dicta quasi eveniet mollitia dolores quis nemo velit incidunt dignissimos totam magni ut sit. Nostrum, nesciunt veniam!</p>
+            <p>price - 800 Taka </p>
+            <p>Vel harum similique veniam officiis. Perspiciatis ex magnam pariatur, unde quisquam cupiditate, illum ipsa culpa a dolorem consequatur dignissimos veritatis.</p>
             <button>Buy Now</button>
-        </food>
-        <food>
+        </div>
+        <div class="food">
             <img src="image/food.webp" alt="">
             <h3>Food Item - 9</h3>
-            <p>price -09 </p>
-            <p>Saepe velit quibusdam blanditiis non? Accusamus est sunt esse aliquam voluptatem? Temporibus minus expedita harum sit odio sint ipsam repudiandae.</p>
+            <p>price - 900 Taka </p>
+            <p>Placeat, ad eaque impedit dolorum, consectetur at obcaecati ab numquam sed non nobis! Unde debitis ullam odit, culpa harum expedita.</p>
             <button>Buy Now</button>
-        </food>
-        <food>
+        </div>
+        <div class="food">
             <img src="image/food.webp" alt="">
             <h3>Food Item - 10</h3>
-            <p>price -10 </p>
-            <p>Excepturi eveniet asperiores, amet rerum architecto optio quibusdam saepe, quia sed ipsum veritatis expedita repudiandae eos iusto, nemo quam officia.</p>
+            <p>price - 1000 Taka </p>
+            <p>Rerum earum atque minima sint dicta cupiditate labore aut aperiam. Dolore, aliquid saepe hic velit unde sapiente magnam? Id, quas.</p>
             <button>Buy Now</button>
-        </food>
-        <food>
+        </div>
+        <div class="food">
             <img src="image/food.webp" alt="">
             <h3>Food Item - 11</h3>
-            <p>price -11 </p>
-            <p>Dolores optio corrupti numquam harum, cupiditate libero quam corporis deleniti ut modi nostrum eligendi ab consequuntur blanditiis voluptas, eveniet consectetur?</p>
+            <p>price - 1100 Taka </p>
+            <p>Neque, accusamus possimus eius facere illum tenetur! Quisquam doloremque recusandae velit reiciendis porro voluptate tempora exercitationem. In rerum inventore sunt?</p>
             <button>Buy Now</button>
-        </food>
-        <food>
+        </div>
+        <div class="food">
             <img src="image/food.webp" alt="">
             <h3>Food Item - 12</h3>
-            <p>price -12 </p>
-            <p>Dolorum saepe earum perspiciatis tempore inventore accusantium cum quos, illum dicta esse voluptas vero facere, deleniti asperiores et eius harum?</p>
+            <p>price - 1200 Taka </p>
+            <p>Itaque numquam soluta aut, enim magnam blanditiis eveniet ut unde nihil quos! Odio perferendis porro minima aliquid natus tenetur blanditiis.</p>
             <button>Buy Now</button>
-        </food>
+        </div>
     </div>
+
     
 </body>
 </html>
